--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.social-btn {
+  height: 40px;
+  width: 200px;
+  background-color: blue;
+  color: white;
+  border-radius: 10px;
+  text-align: center;
+  font-family: verdana;
+}
