Assignment 24: Not Completed(2)

--- a/app/views/users/confirmation.html.erb
+++ b/app/views/users/confirmation.html.erb
@@ -1,8 +1,18 @@
 <h1>Sign Up Confirmation</h1>
-<h2>Are you sure these values are correct?</h2>
 
-<%= "Email: #{@user.email}" %>
-<%= "Name: #{@user.name}" %>
+<div class="row">
+  <div class="col-md-4">
+    <h2>Are you sure these values are correct?</h2>
+    <%= "Email: #{@user.email}" %>
+    <%= "Name: #{@user.name}" %>
+  </div>
+</div>
 
-<%= button_to "Yes", {controller: "users", action: "create", params: params.require(:user).permit(:name, :email, :password, :password_confirmation)}, class: 'btn btn-success' %>
-<%= button_to "No", {controller: "users", action: "new"} , class: 'btn btn-danger', method: :get %>
+<div class="row">
+  <div class="col-md-4">
+    <%= button_to "Yes", {controller: "users", action: "create", params: params.require(:user).permit(:name, :email, :password, :password_confirmation)}, class: 'btn btn-success' %>
+  </div>
+  <div class="col-md-4">
+    <%= button_to "No", {controller: "users", action: "new"} , class: 'btn btn-danger', method: :get %>
+  </div>
+</div>
