--- a/app/views/users/confirmation.html.erb
+++ b/app/views/users/confirmation.html.erb
@@ -1,10 +1,10 @@
-<h1>Sign Up Confirmation</h1>
+<h2>Sign Up Confirmation</h2>
 
 <div class="row">
   <div class="col-md-4">
-    <h2>Are you sure these values are correct?</h2>
-    <%= "Email: #{@user.email}" %>
-    <%= "Name: #{@user.name}" %>
+    <h4>Are you sure these values are correct?</h4>
+    <h5><%= "Email: #{params[:user][:email]}" %></h5>
+    <h5><%= "Name: #{params[:user][:name]}" %></h5>
   </div>
 </div>
 
