--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,16 @@
  *= require_tree .
  *= require_self
  */
- 
+
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+.navbar {
+  margin-top: 10px;
+  padding: 3px;
+}
+
+.avatar {
+  height: 40px;
+  margin-top: 5px;
+}
