--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,27 @@
   </head>
 
   <body>
+
     <div class="container">
-      <ul class="nav nav-tabs">
-        <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to "Topics", topics_path %></li>
-        <li><%= link_to 'About', about_path %></li>
-        <% if current_user %>
-          <li class="pull-right"><%= link_to "#{current_user.name} -Sign Out", session_path(current_user), method: :delete %></li>
-          <li class="pull-right"><img src="<%= avatar_url(current_user) %>"/></li>
-        <% else %>
-          <li class="pull-right"><%= link_to "Sign In", new_session_path %></li>
-          <li class="pull-right"><%= link_to "Sign Up", new_user_path %></li>
-        <% end %>
-      </ul>
+
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav">
+            <li><%= link_to 'Home', root_path %></li>
+            <li><%= link_to "Topics", topics_path %></li>
+            <li><%= link_to 'About', about_path %></li>
+          </ul>
+          <ul class="nav navbar-nav pull-right">
+            <% if current_user %>
+              <li class="pull-right"><%= link_to "#{current_user.name} - Sign Out", session_path(current_user), method: :delete %></li>
+              <li class="pull-right"><img class="avatar" src="<%= avatar_url(current_user) %>"/></li>
+            <% else %>
+              <li class="pull-right"><%= link_to "Sign In", new_session_path %></li>
+              <li class="pull-right"><%= link_to "Sign Up", new_user_path %></li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
 
       <% if flash[:notice] %>
         <div class="alert alert-success">
