--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="container"
+    <div class="container">
       <ul class="nav nav-tabs">
         <li><%= link_to 'Home', root_path %></li>
         <li><%= link_to "Topics", topics_path %></li>
