--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,6 +10,7 @@
     <p class="lead"><%= @topic.description %></p>
     <% @topic.posts.each do |post| %>
       <div class="media">
+        <%= render 'votes/voting', post: post %>
         <div class="media-body">
           <h4 class="media-heading">
             <%= link_to post.title, topic_post_path(@topic, post) %>
