Assignment 31: not completed

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,46 @@
   </div>
 </div>
 
-<h2>Posts</h2>
-<%= render @user.posts %>
+<div class="row">
+  <div class="col-md-8">
+    <h2>Posts</h2>
+    <% unless posts_for(@user) == 0 %>
+      <%= render @user.posts %>
+    <% else %>
+      <%= @user.name %> has not submitted any posts yet.
+    <% end %>
+  </div>
+</div>
 
-<h2>Comments</h2>
-<%= render @user.comments %>
+<div class="row">
+  <div class="col-md-8">
+    <h2>Comments</h2>
+    <% unless comments_for(@user) == 0 %>
+    <%= render @user.comments %>
+    <% else %>
+    <%= @user.name %> has not submitted any comments yet.
+    <% end %>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-8">
+    <h2>Posts that <%= @user.name %> has favorited</h2>
+    <%= @user.favorites.each do |fav| %>
+    <div class="row">
+      <div class="col-md-8">
+      <% find_post = Post.find_by(id: fav.post_id) %>
+      <div class="media-left">
+        <%= image_tag find_post.user.avatar_url(48), class: 'pull-left media-object ' %>
+      </div>
+      <div class="media-body">
+        <h4><%= find_post.title %></h4>
+        <p><%= find_post.body[0..50].gsub(/\s\w+\s*$/,'...') %><p>
+        <small>
+          <%= find_post.comments.count %> comments
+        </small>
+      </div>
+    </div>
+  </div>
+    <% end %>
+  </div>
+</div>
